auto-test/tests/chapter_18/invalid_parse/misplaced_storage_class.c
struct s {
    int a;
};


struct static s foo;